<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".NoteMakerRecycleBin"
   >
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appbar"
        android:background="#00000000"
        >
        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:id="@+id/toolbar"
            >

        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:layout_below="@id/appbar"
        android:id="@+id/note_deleted1"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/titleh1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/title"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_8"
                android:background="#00000000"
                android:textSize="20sp"
                android:inputType="textMultiLine"/>
            <TextView
                android:id="@+id/notes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:hint="@string/notes"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_8"
                android:textSize="16sp"
                android:inputType="textMultiLine"/>
        </LinearLayout>
    </ScrollView>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_add_box_24"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/margin_16"
        android:id="@+id/extra_options"
        android:contentDescription="@string/sample_image_description"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/margin_16"
        android:id="@+id/options"
        android:contentDescription="@string/sample_image_description"
        android:src="@drawable/ic_baseline_more_vert_24"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_16"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_12"
        android:id="@+id/time"
        />
</RelativeLayout>

