<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contentarea"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoteMaker">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appbar"

        android:background="#00000000"
        >
        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:id="@+id/toolbar"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_archive_24"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/margin_16"
                    android:id="@+id/archieve"
                    android:contentDescription="@string/sample_image_description"
                    />
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_toStartOf="@id/archieve"
                    android:layout_marginEnd="@dimen/margin_16"
                    android:id="@+id/pin"
                    android:src="@drawable/icon_not_pinned"
                    android:contentDescription="@string/sample_image_description"
                    />
            </RelativeLayout>
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/notemakerscrollview"
        android:layout_below="@id/appbar"
        android:fillViewport="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/titleandbody"
            android:background="@android:color/white"
            android:orientation="vertical">
            <EditText
                android:id="@+id/titleh1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_8"
                android:background="#00000000"
                android:textSize="20sp"
                android:inputType="textMultiLine"/>
            <EditText
                android:id="@+id/notes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:hint="@string/notes"
                android:gravity="top"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_8"
                android:textSize="16sp"
                android:inputType="textMultiLine"/>
        </LinearLayout>
    </ScrollView>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_add_box_24"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/margin_16"
        android:id="@+id/extra_options"
        android:contentDescription="@string/sample_image_description"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/margin_16"
        android:id="@+id/options"
        android:contentDescription="@string/sample_image_description"
        android:src="@drawable/ic_baseline_more_vert_24"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_16"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_12"
        android:id="@+id/edited_time"
        />

</RelativeLayout>

